# Vlsir

bindings/rust/: Cargo.toml  build.rs
