[package]
name = "vlsir"
description = "Rust Bindings to the VLSIR Chip-Design Data Schemas"
authors = ["Dan Fritchman <dan@fritch.mn>"]
edition = "2018"
license = "BSD-3-Clause"
repository = "https://github.com/dan-fritchman/Vlsir"
version = "0.2.2"


[dependencies]
prost = "0.13.4"
prost-types = "0.13.4"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"

[build-dependencies]
prost-build = "0.13.4"
protox = "0.7.1"
serde_derive = "1"
